# music-lib-manager

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  metadata.rs  music_library.rs  player.rs  queue.rs  scanner.rs
