[package]
name = "music-lib-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
daemonize = "0.5.0"
home = "0.5.9"
lofty = "0.21.1"
rodio = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
walkdir = "2.5.0"
